--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "element-plus": "^2.9.3",
+    "js-cookie": "^3.0.5",
+    "vue": "^3.0.0",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
